Test/bad/coverage/vect_valid_impossible_by_vect.tt
import Data.Nat

data Vect : Nat -> Type -> Type where
     VNil : (a : Type) -> Vect Z a
     VCons : (a : Type) -> (k : Nat) ->
             a -> Vect k a -> Vect (S k) a

-- Possible cases direct by another Vect
-- Case for both VCons should be valid
pluses : (n : Nat) ->
         Vect n Nat ->
         Vect n Nat ->
         Vect n Nat
pluses _ (VNil _) (VNil _) = VNil _
pat n, x, xs, y, ys =>
  pluses _ (VCons _ n x xs) (VCons _ _ y ys) impossible